[tool.poetry]
name = "Risotto"
version = "0.0.1"
description = "Risotto"
authors = ["Inria Chile"]

packages = []

[tool.poetry.dependencies]
python = "^3.9,<3.12"
pandas = "^1.4.4"
seaborn = "^0.11.2"
matplotlib = "^3.5.3"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"


[tool.poetry.dev-dependencies]
black = {extras = ["jupyter"], version = "*"}
tqdm = "*"
flake8 = "*"
bandit = "1.6.2"
notebook = "*"
ipywidgets = "*"
pytest = "*"
pytest-cov = "*"
typer = "*"
jupyterlab-widgets = "^3.0.1"
matplotlib = "^3.5.3"

[tool.black]
line-length = 127

[tool.pytest.ini_options]
addopts = "--doctest-modules"
junit_family = "xunit2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
